test/valid/builtins/uri.js
decodeURI('bla') == 'bla';
decodeURIComponent('bla') == 'bla';
encodeURI('bla') == 'bla';
encodeURIComponent('bla') == 'bla';
