test/invalid/builtins/uri.js
decodeURI('bla') == 1;
decodeURIComponent(2) == 'bla';
encodeURI();
encodeURIComponent('bla') == 3;
